# pi-speech-processor

./: .gitignore  README.md  audio_test.py  pyproject.toml
app/: main.py
app/models/: audio_model.py
app/services/: audio_service.py  llm_service.py
