[tool.poetry]
name = "pi-speech-processor"
version = "0.1.0"
description = ""
authors = ["LeonardoNatale <natale.leonardo1997@gmail.com>"]
packages = [
    { include="app", from="." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.2"
transformers = "^4.34.1"
torch = "^2.1.0"
soundfile = "^0.12.1"
librosa = "^0.10.1"
sounddevice = "^0.4.6"
modal = "^0.55.4002"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app.main:start"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
line-length = 100
target-version = 'py39'
ignore = ["E501"]